# gstspotify

./: README  configure.ac
src/: Makefile.am  gstspotify.c  gstspotifysrc.c  gstspotifysrc.h
